--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@headlessui/react": "^1.7.19",
 		"@heroicons/react": "^2.1.3",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.7",
 		"axios": "^1.6.8",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.4",
